@@ -260,6 +260,7 @@ upgrade.caption.detected=Ein JAMWiki Upgrade wurde installiert.\r\nBitte machen 
 upgrade.caption.upgradecomplete=Upgrade komplett.  F\u00FCr Fehler, siehe unten.<br />{0}
 upgrade.caption.upgradefailed=Der Upgrade ist fehlgeschlagen. Please see below and check the logs for any failure messages, and consult the UPGRADE.txt document for details on how to perform a manual upgrade.  Please report this error at <a href\="http\://jamwiki.org/"> jamwiki.org</a> and provide any relevant information in the bug report.
 upgrade.error.notrequired=Zur Zeit ist kein Upgrade erforderlich.
+upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=Upgrade
 upload.error.directorycreate=Kann den Ordner {0} zum Hochladen nicht erstellen.
 upload.error.filename=Ung\u00FCltiger Dateiname
