@@ -261,6 +261,7 @@ upgrade.caption.detected=An upgrade to JAMWiki has been installed.  Please back 
 upgrade.caption.upgradecomplete=Upgrade successful.<br />{0}
 upgrade.caption.upgradefailed=The upgrade has failed.  Please see below and check the logs for any failure messages, and consult the UPGRADE.txt document for details on how to perform a manual upgrade.  Please report this error at <a href="http://jamwiki.org/"> jamwiki.org</a> and provide any relevant information in the bug report.
 upgrade.error.notrequired=No upgrade is currently required.
+upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=Upgrade
 upload.error.directorycreate=Unable to create upload directory {0}.
 upload.error.filename=Invalid filename.
